--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,15 @@
 S3method(print,drift_dm)
 S3method(print,summary.drift_dm)
 S3method(summary,drift_dm)
+export(calc_cafs)
+export(calc_quantiles)
 export(drift_dm)
+export(estimate_model)
+export(re_evaluate_model)
+export(set_data)
+export(set_free_prms)
+export(set_model_prms)
+export(set_solver_setting)
 export(simulate_data)
+export(simulate_trace)
 importFrom(magrittr,"%>%")
