--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,17 @@ Description: UNDER CONSTRUCTION! This package will help users to fit a drift dif
     models for fitting data from conflict tasks. Version 0.1.0 is not meant for use yet!
 License: MIT + file LICENSE
 Suggests: 
-    testthat (>= 3.0.0), cowsay
+    testthat (>= 3.0.0),
+    cowsay,
+    knitr,
+    rmarkdown
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Roxygen: list(markdown = TRUE)
 Imports: 
   magrittr, limSolve, withr, parallel, DEoptim, dfoptim
-
+Depends: 
+    R (>= 2.10)
+VignetteBuilder: knitr
