--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,5 @@ export(set_solver_settings)
 export(simulate_data)
 export(simulate_trace)
 export(x)
+importFrom(Rcpp,sourceCpp)
+useDynLib(dRiftDM, .registration = TRUE)
