--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,7 @@ Description: UNDER CONSTRUCTION! This package will help users to fit a drift dif
     models for fitting data from conflict tasks. Version 0.1.0 is not meant for use yet!
 License: MIT + file LICENSE
 Suggests: 
-    testthat (>= 3.0.0),
-    cowsay,
-    knitr,
-    rmarkdown
+    testthat (>= 3.0.0), cowsay, knitr, rmarkdown, DMCfun, truncnorm, vdiffr
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
