--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,23 @@
 S3method(print,drift_dm)
 S3method(print,summary.drift_dm)
 S3method(summary,drift_dm)
+export(b_constant)
 export(calc_cafs)
+export(calc_pdfs)
 export(calc_quantiles)
+export(dmc_dm)
 export(drift_dm)
 export(estimate_model)
-export(get_pdfs)
+export(mu_constant)
+export(mu_dmc_dm)
+export(mu_int_constant)
+export(mu_int_dmc_dm)
+export(nt_constant)
+export(nt_truncated_normal)
 export(plot_cafs)
 export(plot_quantiles)
 export(plot_trace)
+export(ratcliff_dm)
 export(re_evaluate_model)
 export(set_b_fun)
 export(set_dt_b_fun)
@@ -24,5 +33,7 @@ export(set_solver_settings)
 export(set_x_fun)
 export(simulate_data)
 export(simulate_trace)
+export(x_beta)
 importFrom(Rcpp,sourceCpp)
+importFrom(Rdpack,reprompt)
 useDynLib(dRiftDM, .registration = TRUE)
