--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ LazyData: true
 RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 Imports: 
-  withr, parallel, DEoptim, dfoptim, Rcpp, Rdpack
+  withr, parallel, DEoptim, dfoptim, Rcpp, Rdpack, progress
 LinkingTo: Rcpp
 Depends: 
     R (>= 2.10)
