--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,14 +7,14 @@ S3method(print,summary.drift_dm)
 S3method(summary,dm_fits_subjects)
 S3method(summary,drift_dm)
 export(b_constant)
-export(calc_cafs)
 export(calc_pdfs)
-export(calc_quantiles)
+export(calc_stats)
 export(dmc_dm)
 export(drift_dm)
 export(estimate_model)
 export(estimate_model_subjects)
 export(gather_parameters)
+export(gather_stats)
 export(load_fits_subjects)
 export(mu_constant)
 export(mu_dmc_dm)
@@ -23,6 +23,7 @@ export(mu_int_dmc_dm)
 export(nt_constant)
 export(nt_truncated_normal)
 export(plot_cafs)
+export(plot_prms)
 export(plot_quantiles)
 export(plot_trace)
 export(ratcliff_dm)
