sim_data extended to simulate multiple data sets at once. In addition, new function sim_values, for simulating values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(set_solver_settings)
 export(set_x_fun)
 export(simulate_data)
 export(simulate_trace)
+export(simulate_values)
 export(x_beta)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
