- general structure changed for each component function - changing the workflow for deriving a model's pdf - Implementing delta functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,8 @@ S3method(print,summary.dm_fits_subjects)
 S3method(print,summary.drift_dm)
 S3method(summary,dm_fits_subjects)
 S3method(summary,drift_dm)
-export(b_constant)
-export(calc_pdfs)
 export(calc_stats)
+export(component_shelf)
 export(dmc_dm)
 export(drift_dm)
 export(estimate_model)
@@ -16,15 +15,8 @@ export(estimate_model_subjects)
 export(gather_parameters)
 export(gather_stats)
 export(load_fits_subjects)
-export(mu_constant)
-export(mu_dmc_dm)
-export(mu_int_constant)
-export(mu_int_dmc_dm)
-export(nt_constant)
-export(nt_truncated_normal)
-export(plot_cafs)
 export(plot_prms)
-export(plot_quantiles)
+export(plot_stats)
 export(plot_trace)
 export(ratcliff_dm)
 export(re_evaluate_model)
@@ -41,7 +33,6 @@ export(set_x_fun)
 export(simulate_data)
 export(simulate_trace)
 export(simulate_values)
-export(x_beta)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
 useDynLib(dRiftDM, .registration = TRUE)
