--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,23 +15,19 @@ export(estimate_model_subjects)
 export(gather_parameters)
 export(gather_stats)
 export(load_fits_subjects)
+export(plot_model_comps)
 export(plot_prms)
 export(plot_stats)
-export(plot_trace)
+export(plot_traces)
 export(ratcliff_dm)
 export(re_evaluate_model)
-export(set_b_fun)
-export(set_dt_b_fun)
+export(set_comp_funs)
 export(set_free_prms)
 export(set_model_prms)
-export(set_mu_fun)
-export(set_mu_int_fun)
-export(set_nt_fun)
 export(set_obs_data)
 export(set_solver_settings)
-export(set_x_fun)
 export(simulate_data)
-export(simulate_trace)
+export(simulate_traces)
 export(simulate_values)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
