--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
 License: MIT + file LICENSE
 Description: Drift Diffusion models (DDMs) are common in cognitive psychology to 
   desribe decision processes in simple tasks. We provide a wrapper around 
-  the numerical solution by Richter et al. (2023) to easy apply
+  the numerical solution by Richter et al. (2023) to easily apply
   DDMs via Maximum-Likelihood-Estimation.
 Suggests: 
     testthat (>= 3.0.0), cowsay, knitr, rmarkdown, DMCfun, truncnorm, vdiffr
