zwischen commit vor Corey

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(set_solver_settings)
 export(simulate_data)
 export(simulate_traces)
 export(simulate_values)
+export(ssp_dm)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
 useDynLib(dRiftDM, .registration = TRUE)
