--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
 License: MIT + file LICENSE
 Description: Drift Diffusion models (DDMs) are common in cognitive psychology to 
   desribe decision processes in simple tasks. We provide a wrapper around 
-  the numerical solution by Richter et al. (2023) to easily apply
+  the numerical solutions summarized by Richter et al. (2023) to easily apply
   DDMs via Maximum-Likelihood-Estimation.
 Suggests: 
     testthat (>= 3.0.0), cowsay, knitr, rmarkdown, DMCfun, truncnorm, vdiffr
@@ -23,6 +23,6 @@ Imports:
   withr, parallel, DEoptim, dfoptim, Rcpp, Rdpack, progress
 LinkingTo: Rcpp
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5.0)
 VignetteBuilder: knitr
 RdMacros: Rdpack
