--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,4 +41,6 @@ export(simulate_values)
 export(ssp_dm)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
+importFrom(stats,AIC)
+importFrom(stats,BIC)
 useDynLib(dRiftDM, .registration = TRUE)
