--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,4 +43,6 @@ importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
+importFrom(stats,coef)
+importFrom(stats,logLik)
 useDynLib(dRiftDM, .registration = TRUE)
