Introduction of the flex_prms class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,16 +10,20 @@ S3method(logLik,dm_fits_ids)
 S3method(logLik,drift_dm)
 S3method(print,dm_fits_ids)
 S3method(print,drift_dm)
+S3method(print,flex_prms)
 S3method(print,summary.dm_fits_ids)
 S3method(print,summary.drift_dm)
+S3method(print,summary.flex_prms)
 S3method(summary,dm_fits_ids)
 S3method(summary,drift_dm)
+S3method(summary,flex_prms)
 export(calc_stats)
 export(component_shelf)
 export(dmc_dm)
 export(drift_dm)
 export(estimate_model)
 export(estimate_model_ids)
+export(flex_prms)
 export(gather_parameters)
 export(gather_stats)
 export(load_fits_ids)
