--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ S3method(aggregate_stats,fit_stats)
 S3method(aggregate_stats,quantiles)
 S3method(b_coding,drift_dm)
 S3method(b_coding,fits_ids_dm)
+S3method(calc_pdfs,drift_dm)
+S3method(calc_pdfs,ratcliff_dm)
 S3method(calc_stats,data.frame)
 S3method(calc_stats,drift_dm)
 S3method(calc_stats,fits_ids_dm)
