more precise documentation, deprecation of unpack_traces and replacement with unpack_obj, dedicated print/summary functions for stats_dm and traces_dm objects, more consistent formatting

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,15 @@ LazyData: true
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Imports: 
-  withr, parallel, DEoptim, dfoptim, Rcpp, Rdpack, progress, stats
+    withr,
+    parallel,
+    DEoptim,
+    dfoptim,
+    Rcpp,
+    Rdpack,
+    progress,
+    stats,
+    lifecycle
 LinkingTo: Rcpp
 Depends: 
     R (>= 4.1.0)
