--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,16 +43,32 @@ S3method(obs_data,fits_ids_dm)
 S3method(plot,cafs)
 S3method(plot,delta_funs)
 S3method(plot,drift_dm)
-S3method(plot,list_stats_dm)
 S3method(plot,quantiles)
+S3method(plot,stats_dm_list)
 S3method(plot,traces_dm)
 S3method(plot,traces_dm_list)
+S3method(print,cafs)
+S3method(print,delta_funs)
 S3method(print,drift_dm)
+S3method(print,fit_stats)
 S3method(print,fits_ids_dm)
 S3method(print,flex_prms)
+S3method(print,quantiles)
+S3method(print,stats_dm)
+S3method(print,stats_dm_list)
+S3method(print,sum_dist)
+S3method(print,summary.cafs)
+S3method(print,summary.delta_funs)
 S3method(print,summary.drift_dm)
+S3method(print,summary.fit_stats)
 S3method(print,summary.fits_ids_dm)
 S3method(print,summary.flex_prms)
+S3method(print,summary.quantiles)
+S3method(print,summary.stats_dm)
+S3method(print,summary.stats_dm_list)
+S3method(print,summary.sum_dist)
+S3method(print,summary.traces_dm)
+S3method(print,summary.traces_dm_list)
 S3method(print,traces_dm)
 S3method(print,traces_dm_list)
 S3method(prms_solve,drift_dm)
@@ -62,9 +78,22 @@ S3method(simulate_traces,drift_dm)
 S3method(simulate_traces,fits_ids_dm)
 S3method(solver,drift_dm)
 S3method(solver,fits_ids_dm)
+S3method(summary,cafs)
+S3method(summary,delta_funs)
 S3method(summary,drift_dm)
+S3method(summary,fit_stats)
 S3method(summary,fits_ids_dm)
 S3method(summary,flex_prms)
+S3method(summary,quantiles)
+S3method(summary,stats_dm)
+S3method(summary,stats_dm_list)
+S3method(summary,sum_dist)
+S3method(summary,traces_dm)
+S3method(summary,traces_dm_list)
+S3method(unpack_obj,stats_dm)
+S3method(unpack_obj,stats_dm_list)
+S3method(unpack_obj,traces_dm)
+S3method(unpack_obj,traces_dm_list)
 S3method(unpack_traces,traces_dm)
 S3method(unpack_traces,traces_dm_list)
 S3method(validate_stats_dm,cafs)
@@ -102,9 +131,11 @@ export(simulate_traces)
 export(simulate_values)
 export(solver)
 export(ssp_dm)
+export(unpack_obj)
 export(unpack_traces)
 importFrom(Rcpp,sourceCpp)
 importFrom(Rdpack,reprompt)
+importFrom(lifecycle,deprecated)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,coef)
