--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method("b_coding<-",drift_dm)
 S3method("coef<-",drift_dm)
 S3method("comp_funs<-",drift_dm)
+S3method("conds<-",drift_dm)
+S3method("ddm_opts<-",drift_dm)
 S3method("flex_prms<-",drift_dm)
 S3method("obs_data<-",drift_dm)
 S3method("prms_solve<-",drift_dm)
@@ -29,6 +31,7 @@ S3method(conds,drift_dm)
 S3method(conds,fits_ids_dm)
 S3method(conds,traces_dm_list)
 S3method(copy_class_attributes,stats_dm)
+S3method(ddm_opts,drift_dm)
 S3method(flex_prms,drift_dm)
 S3method(flex_prms,flex_prms)
 S3method(flex_prms,numeric)
@@ -40,6 +43,7 @@ S3method(modify_flex_prms,flex_prms)
 S3method(nobs,drift_dm)
 S3method(obs_data,drift_dm)
 S3method(obs_data,fits_ids_dm)
+S3method(pdfs,drift_dm)
 S3method(plot,cafs)
 S3method(plot,delta_funs)
 S3method(plot,drift_dm)
@@ -48,6 +52,7 @@ S3method(plot,stats_dm_list)
 S3method(plot,traces_dm)
 S3method(plot,traces_dm_list)
 S3method(print,cafs)
+S3method(print,coefs_dm)
 S3method(print,delta_funs)
 S3method(print,drift_dm)
 S3method(print,fit_stats)
@@ -58,6 +63,7 @@ S3method(print,stats_dm)
 S3method(print,stats_dm_list)
 S3method(print,sum_dist)
 S3method(print,summary.cafs)
+S3method(print,summary.coefs_dm)
 S3method(print,summary.delta_funs)
 S3method(print,summary.drift_dm)
 S3method(print,summary.fit_stats)
@@ -79,6 +85,7 @@ S3method(simulate_traces,fits_ids_dm)
 S3method(solver,drift_dm)
 S3method(solver,fits_ids_dm)
 S3method(summary,cafs)
+S3method(summary,coefs_dm)
 S3method(summary,delta_funs)
 S3method(summary,drift_dm)
 S3method(summary,fit_stats)
@@ -105,6 +112,8 @@ S3method(validate_stats_dm,sum_dist)
 export("b_coding<-")
 export("coef<-")
 export("comp_funs<-")
+export("conds<-")
+export("ddm_opts<-")
 export("flex_prms<-")
 export("obs_data<-")
 export("prms_solve<-")
@@ -114,6 +123,7 @@ export(calc_stats)
 export(comp_funs)
 export(component_shelf)
 export(conds)
+export(ddm_opts)
 export(dmc_dm)
 export(drift_dm)
 export(estimate_model)
@@ -123,6 +133,7 @@ export(get_example_fits_ids)
 export(load_fits_ids)
 export(modify_flex_prms)
 export(obs_data)
+export(pdfs)
 export(prms_solve)
 export(ratcliff_dm)
 export(re_evaluate_model)
