--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ S3method(summary,stats_dm_list)
 S3method(summary,sum_dist)
 S3method(summary,traces_dm)
 S3method(summary,traces_dm_list)
+S3method(unpack_obj,coefs_dm)
 S3method(unpack_obj,stats_dm)
 S3method(unpack_obj,stats_dm_list)
 S3method(unpack_obj,traces_dm)
