new basic_stats feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method("prms_solve<-",drift_dm)
 S3method("solver<-",drift_dm)
 S3method(AIC,fits_ids_dm)
 S3method(BIC,fits_ids_dm)
+S3method(aggregate_stats,basic_stats)
 S3method(aggregate_stats,cafs)
 S3method(aggregate_stats,delta_funs)
 S3method(aggregate_stats,fit_stats)
@@ -51,6 +52,7 @@ S3method(plot,quantiles)
 S3method(plot,stats_dm_list)
 S3method(plot,traces_dm)
 S3method(plot,traces_dm_list)
+S3method(print,basic_stats)
 S3method(print,cafs)
 S3method(print,coefs_dm)
 S3method(print,delta_funs)
@@ -62,6 +64,7 @@ S3method(print,quantiles)
 S3method(print,stats_dm)
 S3method(print,stats_dm_list)
 S3method(print,sum_dist)
+S3method(print,summary.basic_stats)
 S3method(print,summary.cafs)
 S3method(print,summary.coefs_dm)
 S3method(print,summary.delta_funs)
@@ -84,6 +87,7 @@ S3method(simulate_traces,drift_dm)
 S3method(simulate_traces,fits_ids_dm)
 S3method(solver,drift_dm)
 S3method(solver,fits_ids_dm)
+S3method(summary,basic_stats)
 S3method(summary,cafs)
 S3method(summary,coefs_dm)
 S3method(summary,delta_funs)
@@ -104,6 +108,7 @@ S3method(unpack_obj,traces_dm)
 S3method(unpack_obj,traces_dm_list)
 S3method(unpack_traces,traces_dm)
 S3method(unpack_traces,traces_dm_list)
+S3method(validate_stats_dm,basic_stats)
 S3method(validate_stats_dm,cafs)
 S3method(validate_stats_dm,delta_funs)
 S3method(validate_stats_dm,fit_stats)
