first commit for Bayesian parameter estimation within dRiftDM using DE-MCMC... Unit tests and more functionality will follow soon

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(ddm_opts)
 export(dmc_dm)
 export(drift_dm)
 export(estimate_model)
+export(estimate_model_bayesian)
 export(estimate_model_ids)
 export(flex_prms)
 export(get_example_fits_ids)
