--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(calc_stats,drift_dm)
 S3method(calc_stats,fits_ids_dm)
 S3method(coef,drift_dm)
 S3method(coef,fits_ids_dm)
+S3method(coef,mcmc_dm)
 S3method(comp_funs,drift_dm)
 S3method(comp_funs,fits_ids_dm)
 S3method(conds,data.frame)
@@ -48,6 +49,7 @@ S3method(pdfs,drift_dm)
 S3method(plot,cafs)
 S3method(plot,delta_funs)
 S3method(plot,drift_dm)
+S3method(plot,mcmc_dm)
 S3method(plot,quantiles)
 S3method(plot,stats_dm_list)
 S3method(plot,traces_dm)
@@ -60,6 +62,7 @@ S3method(print,drift_dm)
 S3method(print,fit_stats)
 S3method(print,fits_ids_dm)
 S3method(print,flex_prms)
+S3method(print,mcmc_dm)
 S3method(print,quantiles)
 S3method(print,stats_dm)
 S3method(print,stats_dm_list)
@@ -72,6 +75,7 @@ S3method(print,summary.drift_dm)
 S3method(print,summary.fit_stats)
 S3method(print,summary.fits_ids_dm)
 S3method(print,summary.flex_prms)
+S3method(print,summary.mcmc_dm)
 S3method(print,summary.quantiles)
 S3method(print,summary.stats_dm)
 S3method(print,summary.stats_dm_list)
@@ -95,6 +99,7 @@ S3method(summary,drift_dm)
 S3method(summary,fit_stats)
 S3method(summary,fits_ids_dm)
 S3method(summary,flex_prms)
+S3method(summary,mcmc_dm)
 S3method(summary,quantiles)
 S3method(summary,stats_dm)
 S3method(summary,stats_dm_list)
