temp; for JSS simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,9 @@ S3method(calc_stats,data.frame)
 S3method(calc_stats,drift_dm)
 S3method(calc_stats,fits_agg_dm)
 S3method(calc_stats,fits_ids_dm)
+S3method(check_discretization,drift_dm)
+S3method(check_discretization,fits_agg_dm)
+S3method(check_discretization,fits_ids_dm)
 S3method(coef,drift_dm)
 S3method(coef,fits_agg_dm)
 S3method(coef,fits_ids_dm)
@@ -45,6 +48,7 @@ S3method(ddm_opts,fits_agg_dm)
 S3method(flex_prms,drift_dm)
 S3method(flex_prms,flex_prms)
 S3method(flex_prms,numeric)
+S3method(get_lower_upper,drift_dm)
 S3method(hist,coefs_dm)
 S3method(logLik,drift_dm)
 S3method(logLik,fits_ids_dm)
@@ -153,6 +157,7 @@ export("prms_solve<-")
 export("solver<-")
 export(b_coding)
 export(calc_stats)
+export(check_discretization)
 export(comp_funs)
 export(component_shelf)
 export(conds)
@@ -166,6 +171,7 @@ export(estimate_model)
 export(estimate_model_ids)
 export(flex_prms)
 export(get_example_fits)
+export(get_lower_upper)
 export(load_fits_ids)
 export(modify_flex_prms)
 export(obs_data)
