- minor bug fixes - ensure t_max/dt/dx consistency - ensure no mass at starting point extremes - starting values - better docu - vignettes re-built - default model uses mu_dummy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ S3method(flex_prms,drift_dm)
 S3method(flex_prms,flex_prms)
 S3method(flex_prms,numeric)
 S3method(get_lower_upper,drift_dm)
+S3method(get_starting_values,drift_dm)
 S3method(hist,coefs_dm)
 S3method(logLik,drift_dm)
 S3method(logLik,fits_ids_dm)
